--- a/kubernetes/apps/observability/kustomization.yaml
+++ b/kubernetes/apps/observability/kustomization.yaml
@@ -12,7 +12,7 @@ resources:
   - ./grafana/ks.yaml
   - ./headlamp/ks.yaml
   - ./kube-prometheus-stack/ks.yaml
-  - ./kubernetes-dashboard/ks.yaml
+  # - ./kubernetes-dashboard/ks.yaml
   - ./loki/ks.yaml
   - ./promtail/ks.yaml
   - ./silence-operator/ks.yaml
