chore(ingress-nginx): set externalTrafficPolicy to Cluster

--- a/kubernetes/apps/network/ingress-nginx/internal/helmrelease.yaml
+++ b/kubernetes/apps/network/ingress-nginx/internal/helmrelease.yaml
@@ -38,6 +38,7 @@ spec:
       service:
         annotations:
           lbipam.cilium.io/ips: ${SVC_NGINX_INTERNAL_IP}
+        externalTrafficPolicy: Cluster
         type: LoadBalancer
       admissionWebhooks:
         objectSelector:
