chore(ingress-nginx): enable allow-snippet-annotations

--- a/kubernetes/apps/network/ingress-nginx/internal/helmrelease.yaml
+++ b/kubernetes/apps/network/ingress-nginx/internal/helmrelease.yaml
@@ -47,6 +47,7 @@ spec:
               operator: In
               values: ["internal"]
       config:
+        allow-snippet-annotations: true
         annotations-risk-level: Critical
         client-body-buffer-size: "100M"
         client-body-timeout: 120
