chore(ingress-nginx): disable allowSnippetAnnotations

--- a/kubernetes/apps/network/ingress-nginx/internal/helmrelease.yaml
+++ b/kubernetes/apps/network/ingress-nginx/internal/helmrelease.yaml
@@ -20,7 +20,7 @@ spec:
     fullnameOverride: *app
     controller:
       replicaCount: 2
-      allowSnippetAnnotations: true
+      # allowSnippetAnnotations: true
       enableAnnotationValidations: true
       extraEnvs:
         - name: TZ
