--- a/kubernetes/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
@@ -43,6 +43,8 @@ spec:
     cleanPrometheusOperatorObjectNames: true
     alertmanager:
       ingress:
+        annotations:
+            nginx.ingress.kubernetes.io/whitelist-source-range: ${NET_WHITELIST_IP_RANGES}
         enabled: true
         ingressClassName: internal
         hosts:
@@ -145,6 +147,8 @@ spec:
             memory: 64Mi
     prometheus:
       ingress:
+        annotations:
+            nginx.ingress.kubernetes.io/whitelist-source-range: ${NET_WHITELIST_IP_RANGES}
         enabled: true
         ingressClassName: internal
         hosts:
