--- a/kubernetes/apps/downloads/qbittorrent/app/helmrelease.yaml
+++ b/kubernetes/apps/downloads/qbittorrent/app/helmrelease.yaml
@@ -175,7 +175,7 @@ spec:
               allowPrivilegeEscalation: false
               capabilities: { add: ["NET_ADMIN"] }
           vuetorrent:
-            dependsOn: gluetun
+            dependsOn: qbittorrent
             image:
               repository: registry.k8s.io/git-sync/git-sync
               tag: v4.4.0
