--- a/kubernetes/apps/downloads/qbittorrent/app/helmrelease.yaml
+++ b/kubernetes/apps/downloads/qbittorrent/app/helmrelease.yaml
@@ -154,7 +154,7 @@ spec:
               - secretRef:
                   name: *app
             probes:
-              liveness: &probes
+              liveness:
                 enabled: true
                 custom: true
                 spec:
