--- a/kubernetes/apps/storage/democratic-csi/iscsi/helmrelease.yaml
+++ b/kubernetes/apps/storage/democratic-csi/iscsi/helmrelease.yaml
@@ -11,7 +11,12 @@ spec:
     operation: copy
   ref:
     tag: 0.14.7
-  url: oci://ghcr.io/democratic-csi/charts
+  url: oci://ghcr.io/home-operations/charts-mirror/democratic-csi
+  verify:
+    provider: cosign
+    matchOIDCIdentity:
+      - issuer: "^https://token.actions.githubusercontent.com$"
+        subject: "^https://github.com/home-operations/charts-mirror.*$"
 ---
 # yaml-language-server: $schema=https://home-kubernetes-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
