--- a/kubernetes/apps/storage/democratic-csi/iscsi/helmrelease.yaml
+++ b/kubernetes/apps/storage/democratic-csi/iscsi/helmrelease.yaml
@@ -10,13 +10,8 @@ spec:
     mediaType: application/vnd.cncf.helm.chart.content.v1.tar+gzip
     operation: copy
   ref:
-    tag: 0.14.7
-  url: oci://ghcr.io/home-operations/charts-mirror/democratic-csi
-  verify:
-    provider: cosign
-    matchOIDCIdentity:
-      - issuer: "^https://token.actions.githubusercontent.com$"
-        subject: "^https://github.com/home-operations/charts-mirror.*$"
+    tag: 0.15.0
+  url: oci://ghcr.io/democratic-csi/charts/democratic-csi
 ---
 # yaml-language-server: $schema=https://home-kubernetes-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
@@ -40,7 +35,9 @@ spec:
       podAnnotations:
         secret.reloader.stakater.com/reload: &secret democratic-csi-iscsi
       driver:
-        image: ghcr.io/democratic-csi/democratic-csi:v1.9.3
+        image: &image
+          registry: ghcr.io/democratic-csi/democratic-csi
+          tag: v1.9.3
         logLevel: debug
       tolerations:
         - effect: NoSchedule
@@ -62,9 +59,11 @@ spec:
         secret.reloader.stakater.com/reload: *secret
       hostPID: true
       cleanup:
-        image: public.ecr.aws/docker/library/busybox:1.37.0
+        image:
+          registry: public.ecr.aws/docker/library/busybox
+          tag: 1.37.0
       driver:
-        image: ghcr.io/democratic-csi/democratic-csi:v1.9.3
+        image: *image
         logLevel: debug
         extraEnv:
           - name: ISCSIADM_HOST_STRATEGY
@@ -75,7 +74,9 @@ spec:
         iscsiDirHostPathType: ""
       priorityClassName: system-node-critical
     csiProxy:
-      image: ghcr.io/democratic-csi/csi-grpc-proxy:v0.5.6
+      image:
+        registry: ghcr.io/democratic-csi/csi-grpc-proxy
+        tag: v0.5.6
     csiDriver:
       name: org.democratic-csi.ssd-iscsi
     storageClasses:
