--- a/kubernetes/apps/storage/democratic-csi/nfs/helmrelease.yaml
+++ b/kubernetes/apps/storage/democratic-csi/nfs/helmrelease.yaml
@@ -21,7 +21,9 @@ spec:
       podAnnotations:
         secret.reloader.stakater.com/reload: &secret democratic-csi-nfs
       driver:
-        image: ghcr.io/democratic-csi/democratic-csi:v1.9.3
+        image: &image
+          registry: ghcr.io/democratic-csi/democratic-csi
+          tag: v1.9.3
         logLevel: debug
       tolerations:
         - effect: NoSchedule
@@ -42,12 +44,16 @@ spec:
       podAnnotations:
         secret.reloader.stakater.com/reload: *secret
       cleanup:
-        image: public.ecr.aws/docker/library/busybox:1.37.0
+        image:
+          registry: public.ecr.aws/docker/library/busybox
+          tag: 1.37.0
       driver:
-        image: ghcr.io/democratic-csi/democratic-csi:v1.9.3
+        image: *image
         logLevel: debug
     csiProxy:
-      image: ghcr.io/democratic-csi/csi-grpc-proxy:v0.5.6
+      image:
+        registry: ghcr.io/democratic-csi/csi-grpc-proxy
+        tag: v0.5.6
     csiDriver:
       name: "org.democratic-csi.ssd-nfs"
     storageClasses:
