--- a/kubernetes/apps/observability/kromgo/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/kromgo/app/helmrelease.yaml
@@ -69,6 +69,8 @@ spec:
             port: *healthPort
     ingress:
       app:
+        annotations:
+          external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
         className: external
         hosts:
           - host: &host "{{ .Release.Name }}.${SECRET_DOMAIN}"
