--- a/kubernetes/apps/observability/kromgo/app/resources/config.yaml
+++ b/kubernetes/apps/observability/kromgo/app/resources/config.yaml
@@ -55,8 +55,8 @@ metrics:
     suffix: "d"
     colors:
       - { color: green, min: 0, max: 180 }
-      - { color: orange", min: 181, max: 360 }
-      - { color: red", min: 361, max: 9999 }
+      - { color: orange, min: 181, max: 360 }
+      - { color: red, min: 361, max: 9999 }
     title: Age
 
   - name: cluster_uptime_days
