--- a/kubernetes/apps/observability/kromgo/app/resources/config.yaml
+++ b/kubernetes/apps/observability/kromgo/app/resources/config.yaml
@@ -45,7 +45,7 @@ metrics:
     query: round(sum(node_memory_MemTotal_bytes{kubernetes_node!=""} - node_memory_MemAvailable_bytes{kubernetes_node!=""}) / sum(node_memory_MemTotal_bytes{kubernetes_node!=""}) * 100, 0.1)
     suffix: "%"
     colors:
-      - { color: yellow, min: 0, max: 50 }
+      - { color: green, min: 0, max: 50 }
       - { color: orange, min: 51, max: 75 }
       - { color: red, min: 76, max: 9999 }
     title: Memory
