feat(sonarr): add tba-refresher script

--- a/kubernetes/apps/media/sonarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/sonarr/app/helmrelease.yaml
@@ -121,5 +121,8 @@ spec:
           - path: /scripts/pushover-notify.sh
             subPath: pushover-notify.sh
             readOnly: true
+          - path: /scripts/tba-refresher.sh
+            subPath: tba-refresher.sh
+            readOnly: true
       tmp:
         type: emptyDir
