--- a/kubernetes/apps/media/sonarr/app/kustomization.yaml
+++ b/kubernetes/apps/media/sonarr/app/kustomization.yaml
@@ -8,7 +8,7 @@ resources:
 configMapGenerator:
   - name: sonarr-scripts
     files:
-      - pushover-notify.sh=./resources/pushover-notify.sh
+      - pushover-notifier.sh=./resources/pushover-notifier.sh
       - tba-refresher.sh=./resources/tba-refresher.sh
 generatorOptions:
   disableNameSuffixHash: true
