--- a/kubernetes/apps/media/radarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/radarr/app/helmrelease.yaml
@@ -118,8 +118,8 @@ spec:
         name: radarr-scripts
         defaultMode: 0775
         globalMounts:
-          - path: /scripts/pushover-notify.sh
-            subPath: pushover-notify.sh
+          - path: /scripts/pushover-notifier.sh
+            subPath: pushover-notifier.sh
             readOnly: true
       tmp:
         type: emptyDir
