--- a/kubernetes/apps/media/radarr/app/kustomization.yaml
+++ b/kubernetes/apps/media/radarr/app/kustomization.yaml
@@ -8,7 +8,7 @@ resources:
 configMapGenerator:
   - name: radarr-scripts
     files:
-      - pushover-notify.sh=./resources/pushover-notify.sh
+      - pushover-notifier.sh=./resources/pushover-notifier.sh
 generatorOptions:
   disableNameSuffixHash: true
   annotations:
