feat(kromgo): add to gatus

--- a/kubernetes/apps/observability/kromgo/ks.yaml
+++ b/kubernetes/apps/observability/kromgo/ks.yaml
@@ -16,6 +16,7 @@ spec:
   postBuild:
     substitute:
       APP: *app
+      GATUS_PATH: /talos_version
   prune: true
   retryInterval: 2m
   sourceRef:
