--- a/kubernetes/apps/media/navidrome/app/helmrelease.yaml
+++ b/kubernetes/apps/media/navidrome/app/helmrelease.yaml
@@ -35,13 +35,14 @@ spec:
               ND_AUTOIMPORTPLAYLISTS: false
               ND_ARTISTARTPRIORITY: 'folder.*, external'
               ND_COVERARTPRIORITY: 'folder.*, cover.*, embedded, external'
-              ND_DEFAULTTHEME: 'Spotify-ish'
-              ND_IMAGECACHESIZE: '512MB'
-              ND_PROMETHEUS_ENABLED: true
               ND_SCANSCHEDULE: '@every 1h'
               ND_SESSIONTIMEOUT: '72h'
+              ND_IMAGECACHESIZE: '512MB'
               ND_TRANSCODINGCACHESIZE: '512MB'
               ND_ENABLEINSIGHTSCOLLECTOR: false
+              ND_PROMETHEUS_ENABLED: true
+              ND_DEFAULTTHEME: 'Spotify-ish'
+              ND_REVERSEPROXYUSERHEADER: x-authentik-username
             probes:
               liveness: &probes
                 enabled: true
