--- a/kubernetes/apps/media/navidrome/app/helmrelease.yaml
+++ b/kubernetes/apps/media/navidrome/app/helmrelease.yaml
@@ -42,7 +42,7 @@ spec:
               ND_ENABLEINSIGHTSCOLLECTOR: false
               ND_PROMETHEUS_ENABLED: true
               ND_DEFAULTTHEME: 'Spotify-ish'
-              ND_REVERSEPROXYWHITELIST: ${NET_LOCAL_CIDR}
+              ND_REVERSEPROXYWHITELIST: "0.0.0.0/0"
               ND_REVERSEPROXYUSERHEADER: x-authentik-username
             probes:
               liveness: &probes
