--- a/kubernetes/apps/media/navidrome/app/helmrelease.yaml
+++ b/kubernetes/apps/media/navidrome/app/helmrelease.yaml
@@ -42,7 +42,6 @@ spec:
               ND_ENABLEINSIGHTSCOLLECTOR: false
               ND_PROMETHEUS_ENABLED: true
               ND_DEFAULTTHEME: 'Spotify-ish'
-              ND_REVERSEPROXYWHITELIST: "0.0.0.0/0"
               ND_REVERSEPROXYUSERHEADER: x-authentik-username
             probes:
               liveness: &probes
@@ -92,15 +91,15 @@ spec:
             scrapeTimeout: 10s
     ingress:
       app:
-        annotations:
-          nginx.ingress.kubernetes.io/auth-url: |-
-            http://authentik-outpost-proxy.security.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx
-          nginx.ingress.kubernetes.io/auth-signin: |-
-            https://{{ .Release.Name }}.${SECRET_DOMAIN}/outpost.goauthentik.io/start?rd=$scheme://$http_host$escaped_request_uri
-          nginx.ingress.kubernetes.io/auth-response-headers: |-
-            Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-entitlements,X-authentik-email,X-authentik-name,X-authentik-uid
-          nginx.ingress.kubernetes.io/auth-snippet: |
-            proxy_set_header X-Forwarded-Host $http_host;
+        # annotations:
+        #   nginx.ingress.kubernetes.io/auth-url: |-
+        #     http://authentik-outpost-proxy.security.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx
+        #   nginx.ingress.kubernetes.io/auth-signin: |-
+        #     https://{{ .Release.Name }}.${SECRET_DOMAIN}/outpost.goauthentik.io/start?rd=$scheme://$http_host$escaped_request_uri
+        #   nginx.ingress.kubernetes.io/auth-response-headers: |-
+        #     Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-entitlements,X-authentik-email,X-authentik-name,X-authentik-uid
+        #   nginx.ingress.kubernetes.io/auth-snippet: |
+        #     proxy_set_header X-Forwarded-Host $http_host;
         className: internal
         hosts:
           - host: &host "{{ .Release.Name }}.${SECRET_DOMAIN}"
