--- a/kubernetes/apps/media/navidrome/app/helmrelease.yaml
+++ b/kubernetes/apps/media/navidrome/app/helmrelease.yaml
@@ -65,11 +65,11 @@ spec:
                 memory: 1Gi
             securityContext:
               allowPrivilegeEscalation: false
-              readOnlyRootFilesystem: false # Disable during database upgrade.
+              readOnlyRootFilesystem: true # Disable during database upgrade.
               capabilities: { drop: ["ALL"] }
     defaultPodOptions:
       securityContext:
-        runAsNonRoot: false # Disable during database upgrade.
+        runAsNonRoot: true # Disable during database upgrade.
         runAsUser: &uid 5000
         runAsGroup: *uid
         fsGroup: *uid
