chore: migrate cert-manager to official OCIRepository

--- a/bootstrap/helmfile.yaml
+++ b/bootstrap/helmfile.yaml
@@ -44,7 +44,7 @@ releases:
   - name: spegel
     namespace: kube-system
     atomic: true
-    chart: oci://ghcr.io/spegel-org/helm-charts/spegel
+    chart: oci://quay.io/jetstack/charts/cert-manager
     version: 0.1.1
     values: ['{{ requiredEnv "ROOT_DIR" }}/kubernetes/apps/kube-system/spegel/app/helm/values.yaml']
     needs: ['kube-system/coredns']
