--- a/kubernetes/apps/observability/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/grafana/app/helmrelease.yaml
@@ -334,6 +334,22 @@ spec:
           revision: 26
           datasource:
             - { name: DS_PROMETHEUS, value: Prometheus }
+        truenas-scale-cgroups:
+          url: https://raw.githubusercontent.com/Supporterino/truenas-graphite-to-prometheus/refs/heads/main/dashboards/truenas_scale_cgroups.json
+          datasource:
+            - { name: DS_PROMETHEUS, value: Prometheus }
+        truenas-scale-disk-insights:
+          url: https://raw.githubusercontent.com/Supporterino/truenas-graphite-to-prometheus/refs/heads/main/dashboards/truenas_scale_disk_insights.json
+          datasource:
+            - { name: DS_PROMETHEUS, value: Prometheus }
+        truenas-scale-temperatures:
+          url: https://raw.githubusercontent.com/Supporterino/truenas-graphite-to-prometheus/refs/heads/main/dashboards/truenas_scale_temperatures.json
+          datasource:
+            - { name: DS_PROMETHEUS, value: Prometheus }
+        truenas-scale-overview:
+          url: https://raw.githubusercontent.com/Supporterino/truenas-graphite-to-prometheus/refs/heads/main/dashboards/truenas_scale.json
+          datasource:
+            - { name: DS_PROMETHEUS, value: Prometheus }
         volsync:
           # renovate: depName="Volsync"
           gnetId: 21356
