--- a/kubernetes/apps/observability/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/grafana/app/helmrelease.yaml
@@ -345,7 +345,7 @@ spec:
         truenas-scale-temperatures:
           url: https://raw.githubusercontent.com/Supporterino/truenas-graphite-to-prometheus/refs/heads/main/dashboards/truenas_scale_temperatures.json
           datasource:
-            - { name: DS_MIMIR, value: Prometheus }
+            - { name: DS_PROMETHEUS, value: Prometheus }
         truenas-scale-overview:
           url: https://raw.githubusercontent.com/Supporterino/truenas-graphite-to-prometheus/refs/heads/main/dashboards/truenas_scale.json
           datasource:
