--- a/kubernetes/apps/network/tailscale-operator/app/helmrelease.yaml
+++ b/kubernetes/apps/network/tailscale-operator/app/helmrelease.yaml
@@ -1,14 +1,22 @@
 ---
-# yaml-language-server: $schema=https://home-kubernetes-schemas.pages.dev/source.toolkit.fluxcd.io/helmrepository_v1.json
-apiVersion: source.toolkit.fluxcd.io/v1
-kind: HelmRepository
+# yaml-language-server: $schema=https://home-kubernetes-schemas.pages.dev/source.toolkit.fluxcd.io/ocirepository_v1beta2.json
+apiVersion: source.toolkit.fluxcd.io/v1beta2
+kind: OCIRepository
 metadata:
-  name: tailscale
-  namespace: network # Required for Renovate lookups.
+  name: tailscale-operator
 spec:
-  interval: 1h
-  timeout: 3m
-  url: https://pkgs.tailscale.com/helmcharts
+  interval: 5m
+  layerSelector:
+    mediaType: application/vnd.cncf.helm.chart.content.v1.tar+gzip
+    operation: copy
+  ref:
+    tag: 1.82.0
+  url: oci://ghcr.io/home-operations/charts-mirror/tailscale-operator
+  verify:
+    provider: cosign
+    matchOIDCIdentity:
+      - issuer: "^https://token.actions.githubusercontent.com$"
+        subject: "^https://github.com/home-operations/charts-mirror.*$"
 ---
 # yaml-language-server: $schema=https://home-kubernetes-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
@@ -17,14 +25,9 @@ metadata:
   name: &app tailscale-operator
 spec:
   interval: 1h
-  chart:
-    spec:
-      chart: tailscale-operator
-      version: 1.82.0
-      sourceRef:
-        kind: HelmRepository
-        name: tailscale
-        namespace: network
+  chartRef:
+    kind: OCIRepository
+    name: ingress-nginx
   install:
     remediation:
       retries: -1
