--- a/kubernetes/components/common/substitutions/cluster-secrets.sops.yaml
+++ b/kubernetes/components/common/substitutions/cluster-secrets.sops.yaml
@@ -8,6 +8,7 @@ stringData:
     SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:32I13WpDrKy3wOSco+nNKMj2kdcuKH+97jr4GUAw9bu1r2Om,iv:5b1U1TrmzExDlP6mSo5kG2zS8WgEioW37fs8jrt6gxE=,tag:SaulV+U5pt8tf9/jxLg2dA==,type:str]
     SECRET_TAILSCALE_ADMIN: ENC[AES256_GCM,data:Y7lV74tCpKKySqAm,iv:eRbSznekYKvKLQUTaL83ey1lpWfminFz4Q2zdJ/Ym6s=,tag:TZcSi5v5xuByVFoOQHpGVg==,type:str]
     SECRET_NAS_IP: ENC[AES256_GCM,data:S89CCLY3shUYhQ==,iv:qVuglqCCIuxr3MaDv6OjgYIF3F/e5bM7aclBfM5s3Js=,tag:sSbl1BNMxRlHOdWrQxcwVQ==,type:str]
+    SECRET_NFS_PATH_GAMES: ENC[AES256_GCM,data:ay0UUobboNzD5M1HQOF4/pcVl1Yeg2ouD99r,iv:2cnrt4/YFWgcwksXRrqYBMZe6nsRUlcyu+Xel1oM2I0=,tag:yehaqMV6Cl+DryULIBIG8w==,type:str]
     SECRET_NFS_PATH_IMMICH: ENC[AES256_GCM,data:5hpt0M33iZBbKaYw6aTgg1396kE=,iv:X3fQKL4eWsgmeMFb8NV2agHvgI4YJ8l4bfnhOghILo4=,tag:t8zmU4/aBFGoBGmdcxRnOg==,type:str]
     SECRET_NFS_PATH_MEDIA: ENC[AES256_GCM,data:bVA9rM9zTQnPa80ANLOlSlkhdeI=,iv:tfiZhLjWMtWCpyIfBa++uTrHesMtUrH2Rwk42ugoIEg=,tag:G/pEBe2YZG4BFu/0AjrKxg==,type:str]
     SECRET_NFS_PATH_MINIO: ENC[AES256_GCM,data:lRWSZrb39E6S0OUHK8jhZLGHSw==,iv:qvRIAOCiFa3oWH+EK0lsv7+X0hxfCKAjs4rAYRdIVck=,tag:55xH2df0EgBfzn+Q1TvBfQ==,type:str]
@@ -15,10 +16,6 @@ stringData:
     SECRET_NFS_PATH_PGBACKUPS: ENC[AES256_GCM,data:NLqAQxTFKWLgd4pbddOwhwFoMLmXWPjNjcCtTA0/X7U=,iv:HZuY0QMNrR/4YEfSytRjqSiORlCn5SRtiZ/z/i9qAv0=,tag:6DE91mHLXMEjckOS3gAdJA==,type:str]
     SECRET_NFS_PATH_PHOTOS: ENC[AES256_GCM,data:Q1009qKw0ya+W8DDgioyRNoDbY4=,iv:dvrJtiAwZibFjuR+VpgEaoZRZfKNzfrHu2GYyhIRdTk=,tag:em6x2Ij2J9W23F7mzTGZag==,type:str]
 sops:
-    kms: []
-    gcp_kms: []
-    azure_kv: []
-    hc_vault: []
     age:
         - recipient: age16jrnvsqz55me3ju4kl96y2tjs90gygyvk5ren7ch8mv2rxtrqvus508fpn
           enc: |
@@ -29,9 +26,8 @@ sops:
             Vmg3V1hoRzdEMHVwblhEazR2ZFlNTlEKrR8H1dmbtc1tNeVKD9BSu2kY7xgRH+uo
             Xct3NGYDiJqr9NlrJrV6LbsB6RliBRhjkjt8mfiFn6pGMIj5wPnRpw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-02-26T12:54:55Z"
-    mac: ENC[AES256_GCM,data:h8snFYQFktiTNPhdPfPDb+sEsDnlM3Qox+NFbae4wXzUKzMDzomTnZeuFV59LuCTLnaZCxZeKeY34N9LEP/M7dZv52DvjesZkUtCAAJpCMJbczzs+ZUTYxLJrZbJy5qJL//+xdh51Y4BpxUjuTkSfWB402K4HaESFqzjbvBCc7A=,iv:CZkM4vVaA68P/D5SVo3bt/D03dJBH36PkiEOex6B32w=,tag:ntA+K2v0SrkIKL05Vi0SaQ==,type:str]
-    pgp: []
+    lastmodified: "2025-04-10T21:41:36Z"
+    mac: ENC[AES256_GCM,data:oY5EJd01eWWC0UYjX55SSoSYMzqapq2hueDJmo9XuzejUs8eX08QWQ0Tz82jx+CJJMTtSulj3/wMp/OzmNspCce6QZSmfPLN9hjuJNKQ49paf6s+MKrV+zYI3K8tKAkFrE5E6bwfJc9DG0Fx7JyZdq1fGwsHxoF3TGhUUOWszGA=,iv:8u+EJ44a32cz4+VBAx3XRkTAEB41zfqN1jBQGB7hMoE=,tag:zrmqTvtIyXtH+ttvrE8qZQ==,type:str]
     encrypted_regex: ^(data|stringData)$
     mac_only_encrypted: true
-    version: 3.9.1
+    version: 3.10.1
