--- a/kubernetes/apps/games/romm/app/helmrelease.yaml
+++ b/kubernetes/apps/games/romm/app/helmrelease.yaml
@@ -98,6 +98,11 @@ spec:
           - hosts:
               - *host
     persistence:
+      nginx-conf:
+        type: emptyDir
+        globalMounts:
+          - path: /etc/nginx/conf.d
+            subPath: default.conf
       data:
         existingClaim: ${VOLSYNC_CLAIM}
         advancedMounts:
