fix(romm): modify persistence

--- a/kubernetes/apps/games/romm/app/helmrelease.yaml
+++ b/kubernetes/apps/games/romm/app/helmrelease.yaml
@@ -98,6 +98,10 @@ spec:
           - hosts:
               - *host
     persistence:
+      config:
+        type: emptyDir
+        globalMounts:
+          - path: /romm/config
       data:
         existingClaim: ${VOLSYNC_CLAIM}
         advancedMounts:
