--- a/kubernetes/apps/games/kustomization.yaml
+++ b/kubernetes/apps/games/kustomization.yaml
@@ -5,6 +5,6 @@ kind: Kustomization
 namespace: games
 components:
   - ../../components/common
-resources:
+resources: []
   # Flux-Kustomizations
-  - ./romm/ks.yaml
+  # - ./romm/ks.yaml
