fix(romm): modify persistence

--- a/kubernetes/apps/games/romm/app/helmrelease.yaml
+++ b/kubernetes/apps/games/romm/app/helmrelease.yaml
@@ -98,17 +98,8 @@ spec:
           - hosts:
               - *host
     persistence:
-      data:
+      config:
         existingClaim: ${VOLSYNC_CLAIM}
-        advancedMounts:
-          romm:
-            app:
-              - path: /romm/assets
-                subPath: assets
-              - path: /romm/config
-                subPath: config
-              - path: /romm/resources
-                subPath: resources
       games:
         type: nfs
         server: ${SECRET_NAS_IP}
