--- a/kubernetes/apps/games/romm/app/helmrelease.yaml
+++ b/kubernetes/apps/games/romm/app/helmrelease.yaml
@@ -66,10 +66,6 @@ spec:
                 memory: 512Mi
               limits:
                 memory: 4Gi
-            securityContext:
-              allowPrivilegeEscalation: false
-              readOnlyRootFilesystem: false
-              capabilities: { drop: ["ALL"] }
     defaultPodOptions:
       securityContext:
         runAsNonRoot: true
@@ -98,21 +94,22 @@ spec:
           - hosts:
               - *host
     persistence:
+      data:
+        existingClaim: ${VOLSYNC_CLAIM}
+        advancedMounts:
+          romm:
+            app:
+              - path: /romm/assets
+                subPath: assets
+              - path: /romm/config
+                subPath: config
+              - path: /romm/resources
+                subPath: resources
       library:
         type: nfs
         server: ${SECRET_NAS_IP}
         path: ${SECRET_NFS_PATH_GAMES}
         globalMounts:
           - path: /romm/library
-      romm:
-        existingClaim: ${VOLSYNC_CLAIM}
-      romm-config:
-        type: emptyDir
-        globalMounts:
-          - path: /romm/config
-      romm-resources:
-        type: emptyDir
-        globalMounts:
-          - path: /romm/resources
       tmp:
         type: emptyDir
