fix(romm): add configMap

--- a/kubernetes/apps/games/romm/app/helmrelease.yaml
+++ b/kubernetes/apps/games/romm/app/helmrelease.yaml
@@ -98,6 +98,13 @@ spec:
           - hosts:
               - *host
     persistence:
+      config:
+        type: configMap
+        name: romm-config
+        globalMounts:
+          - path: /romm/config/config.yml
+            subPath: config.yml
+            readOnly: true
       romm:
         existingClaim: ${VOLSYNC_CLAIM}
         globalMounts:
