--- a/kubernetes/apps/games/romm/app/kustomization.yaml
+++ b/kubernetes/apps/games/romm/app/kustomization.yaml
@@ -5,9 +5,9 @@ kind: Kustomization
 resources:
   - ./externalsecret.yaml
   - ./helmrelease.yaml
-configMapGenerator:
-  - name: romm-config
-    files:
-      - config.yml=./resources/config.yml
-generatorOptions:
-  disableNameSuffixHash: true
+# configMapGenerator:
+#   - name: romm-config
+#     files:
+#       - config.yml=./resources/config.yml
+# generatorOptions:
+#   disableNameSuffixHash: true
